# shared-desktop-ontologies

./: AUTHORS  CMakeLists.txt  ChangeLog  LICENSE.BSD  LICENSE.CC-BY  LICENSE.DCMI  LICENSE.README  LICENSE.w3c  README  SharedDesktopOntologiesConfig.cmake.in  SharedDesktopOntologiesVersion.cmake.in  shared-desktop-ontologies.pc.cmake
base/: README  dces.ontology.in  dces.trig  dcq.trig  dcterms.ontology.cmake  dcterms.ontology.in  dctype.ontology.cmake  dctype.ontology.in  dctype.trig  exif.rdfs  geo.rdfs  rdf.ontology.cmake  rdf.ontology.in  rdf.trig  rdfs.ontology.in  rdfs.trig  xsd-datatypes.rdf
nao/: nao.ontology.in  nao.trig  nao.turtle  nao_metadata.turtle
nao/doc/: nao-header.html
ncal/: ncal.ontology.in  ncal.trig
ncal/doc/: ncal-header.html
nco/: nco.ontology.in  nco.trig
nco/doc/: nco-header.html
ndo/: ndo.ontology.in  ndo.trig
nexif/: nexif.ontology.in  nexif.trig
nexif/doc/: nexif-header.html
nfo/: nfo.ontology.in  nfo.trig
nfo/doc/: nfo-header.html
nid3/: nid3.ontology.in  nid3.trig
nid3/doc/: nid3-header.html
nie/: nie.ontology.cmake  nie.trig
nie/doc/: nie-header.html
nmm/: nmm.ontology.in  nmm.trig
nmo/: nmo.ontology.in  nmo.trig
nmo/doc/: nmo-header.html
nrl/: nrl.ontology.cmake  nrl.trig
nrl/doc/: nrl-header.html
nso/: nso.ontology.cmake  nso.trig
nso/doc/: nso-header.html
nuao/: nuao.ontology.in  nuao.trig
pimo/: ChangeLog  pimo.ontology.in  pimo.trig
pimo/doc/: pimo-header.html
pimo/doc/handbook_latex/: ignoredpimo.tcpDeutsch.sc  nepomuk.cls  nonissues.aux  nonissues.tex  openissues.aux  openissues.tex  pimo.aux  pimo.bbl  pimo.bib  pimo.bib.bak  pimo.blg  pimo.dvi  pimo.out  pimo.tcp  pimo.tex  pimo.tex.bak  pimo.toc  pimo.tps  solvedissues.aux  solvedissues.tex
pimo/doc/handbook_latex/images/: Bubbles.eps  InformationSocietyTechnologies.eps  Nepomuk.eps  PIMOextensionExample-Teaching.graffle  Thumbs.db  images.ppt
pimo/doc/handbook_latex/sections/: pimo.tex
pimo/doc/presentations/: 2007_09_06_pimo_i_semantics.ppt  SummerSchool_PIMO.ppt  pimo_introduction.ppt
tmo/: tmo.ontology.in  tmo.trig
tmo/doc/: tmo-header.html
